--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -6,7 +6,7 @@
         <title> Пример простой страницы html</title>
     </head>
     <body>
-        Я НЕРЕАЛЬНО КРУТ И МОЙ РЕСПЕКТ БЕЗ МЕРЫ :)
+        Я НЕРЕАЛЬНО КРУТ :)
     </body>
     <footer>
         Подвальчик казино
